L42-AZ-03 Ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: ingress-demo1
          servicePort: 80
        path: /(.*)
      - backend:
          serviceName: ingress-demo2
          servicePort: 80
        path: /two(/|$)(.*)
